# PicoW_RTOS_PID_Control

./: CMakeLists.txt  README.md
doc/: system.drawio
lib/: add_free_rtos_here.txt
src/: CMakeLists.txt  main.c
src/const/: const.h
src/globals/: globals.h
src/task/: task_PID.c  task_control_servo.c  task_emergency.c  task_get_orientation.c  task_serial.c
test/MPU6050_test/: CMakeLists.txt  mpu6050.c
test/SG90_test/: CMakeLists.txt  sg90.c
